--- a/post-job.html
+++ b/post-job.html
@@ -38,14 +38,14 @@
         document.getElementById("jobForm").addEventListener("submit", function(e) {
             e.preventDefault();
             let title = document.getElementById("title").value;
-            let company = document.getElementById("company").value;
+            let companyName = document.getElementById("company").value;
             let description = document.getElementById("description").value;
             let salary = document.getElementById("salary").value;
 
             fetch("http://localhost:3000/jobs", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ title, company, description, salary }) // 🚨 No authentication check
+                body: JSON.stringify({ title, companyName, description, salary }) // 🚨 No authentication check
             }).then(res => res.json()).then(data => {
                 alert("Job Posted!");
             });
