--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -21,32 +21,58 @@
     </nav>
     <div class="form-container1">
         <h1>Forgot Password</h1>
+        <form id="sendCodeForm">
+            <input id="email" placeholder="Email" required>
+            <button type="submit">Send Code</button>
+        </form>
         <form id="changePasswordForm">
             <input id="email2" placeholder="Email" required>
+            <input id="code" placeholder="Code" required>
             <input type="password" id="password2" placeholder="Password" required>
             <button type="submit">Change Password</button>
         </form>
         <a class="loginForgotPassword" href="./login.html">Back To Login</a>
     </div>
     <script>
-        document.getElementById("changePasswordForm").addEventListener("submit", function(e) {
+        document.getElementById("changePasswordForm").style.display = "none";
+        document.getElementById("sendCodeForm").addEventListener("submit", function(e) {
             e.preventDefault();
-            let email = document.getElementById("email2").value;
-            let password = document.getElementById("password2").value;
+            let email = document.getElementById("email").value;
 
-            fetch("http://localhost:3000/users", {
-                method: "PUT",
+            fetch("http://localhost:3000/forgot-password", {
+                method: "POST",
                 headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ email, password })
+                body: JSON.stringify({ email })
             }).then(res => res.json()).then(data => {
                 if (data.success) {
-                    window.location.href = "login.html";  // Redirect to profile
+                    document.getElementById('sendCodeForm').style.display = "none";
+                    document.getElementById('changePasswordForm').style.display = "block";
                 } else {
                     alert(data.message);  // Show the error message from backend
                 }
             }).catch(error => {
                 alert("An error occurred. Please try again.");
             });
+        });
+            document.getElementById("changePasswordForm").addEventListener("submit", function(e) {
+                e.preventDefault();
+                let email = document.getElementById("email2").value;
+                let code = document.getElementById("code").value;
+                let newPassword = document.getElementById("password2").value;
+    
+                fetch("http://localhost:3000/reset-password", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ email, newPassword, code })
+                }).then(res => res.json()).then(data => {
+                    if (data.success) {
+                        window.location.href = "login.html";  // Redirect to profile
+                    } else {
+                        alert(data.message);  // Show the error message from backend
+                    }
+                }).catch(error => {
+                    alert("An error occurred. Please try again.");
+                });
         });
     </script>
 </body>
